0.99.7

* Created extensions/ directory (see extensions/README for more information).
* Created themes/ directory (see themes/README for more information).
* Added get_icon_name() for custom extensions.

0.99.6.5

* Fixed another issue causing grouping to fail.

0.99.6.4

* Added WordPress Codex extension.

0.99.6.3

* Fix for cron schedules not posting correctly.

0.99.6.2

* Fixed an issue which was causing grouping to fail on certain feeds.
* Fixed an issue which was causing the database alter errors in the admin.

0.99.6

* Implemented a solution for missing extensions.
* Changed how versions are handled in Lifestream.

0.99.5.2

* Added Belorussian translation from Fat Cowest (fatcow.com).
* Cleaned up some code in the refresh() method.
* Plurk feed has been readded.
* Fixed an issue with BrightKite check-ins.
* get_label_class should now be defined rather than get_label on feeds.
* Fixed a bug with LikeSongLabel.
* Labels now utilize CAN_GROUP and TEMPLATE constants.

0.99.5.1

* Fixed an issue introduced in 0.99.5 with the locales directory.

0.99.5

* Removed hardcoded wp-content directories.
* Updated Japanese translation.
* Twitter will no longer import your entire history.

0.99.4

* Fix for bug introduced into edit-feed in 0.99.3

0.99.3

* Added HAS_EXCERPTS flag to extensions.
* Excerpts can now be configured per-extension.
* Delicious and similar feeds will now all show excerpts properly.
* Added Upcoming extension.
* Fixed Scrnshots titles.
* Fixed a serious issue with feed keys (many feeds weren't properly identifying new events).
* Fixed an issue where some feeds were not setting dates properly.
* Added Wikipedia extension.

0.99.2

* Updated default localization.
* Updated Spanish localization from Gizmo (first nearly complete translation)!
* Owners now show again on message feeds (e.g. Twitter).
* Fix for Last.FM and similar not showing titles.

0.99.1

* Show owners works again.
* Sidebar widget now has an option to hide/show metadata.